[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "data-app"
version = "0.1.0"
description = ""
authors = [
    { name = "Mark Needham", email = "m.h.needham@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "duckdb>=0.9.0",
    "streamlit>=1.27.2",
    "streamlit-searchbox>=0.1.5",
	"setuptools"
]